<resources>
    <string name="app_name">Dice roller</string>
    <string name="roll">Roll</string>
    <string name="about_me">About me</string>
    <string name="name">Ilija Tomic</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
        been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="what_is_your_nickname">What is your nickname</string>
    <string name="done">Done</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="color_my_view">Color my view</string>
    <string name="how_to_play">How to play</string>
    <string name="tap_the_buttons">Tap the screen and buttons</string>
</resources>
