<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="aboutMeData" type="com.example.diceroller.AboutMeData"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".AboutMeActivity">

        <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={aboutMeData.name}"
                android:textAlignment="center"
                style="@style/NameStyle"/>

        <EditText
                android:id="@+id/nickname_edit"
                style="@style/NameStyle"
                android:inputType="textPersonName"
                android:gravity="center_horizontal"
                android:hint="@string/what_is_your_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/done"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/nickname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="@={aboutMeData.nickname}"
                style="@style/NameStyle"/>

        <ImageView
                android:id="@+id/star_image"
                android:layout_width="match_parent"
                android:src="@android:drawable/star_big_on"
                android:layout_marginTop="@dimen/layout_margin"
                android:contentDescription="@string/yellow_star"
                android:layout_height="wrap_content"/>

        <ScrollView
                android:id="@+id/bio_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <TextView
                    android:id="@+id/bio_text"
                    android:padding="@dimen/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/bio_text"
                    style="@style/NameStyle"/>

        </ScrollView>

    </LinearLayout>
</layout>