<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ColorMyView">

        <TextView
                android:id="@+id/box_one_text"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/box_one"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/box_two_text"
                style="@style/WhiteBox"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:text="@string/box_two"
                android:layout_margin="@dimen/layout_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box_one_text"/>

        <TextView
                android:id="@+id/box_three_text"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/box_three"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginStart="@dimen/layout_margin"
                app:layout_constraintStart_toEndOf="@id/box_two_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/box_four_text"
                app:layout_constraintTop_toTopOf="@+id/box_two_text"/>

        <TextView
                android:id="@+id/box_four_text"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:text="@string/box_four"
                app:layout_constraintStart_toEndOf="@id/box_two_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/box_three_text"
                app:layout_constraintBottom_toTopOf="@+id/box_five_text"/>

        <TextView
                android:id="@+id/box_five_text"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:text="@string/box_five"
                app:layout_constraintStart_toEndOf="@id/box_two_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
                app:layout_constraintTop_toBottomOf="@+id/box_four_text"/>

        <TextView
                android:text="@string/how_to_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_text"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/box_text_size"
                android:layout_marginStart="@dimen/layout_margin"
                app:layout_constraintBaseline_toBaselineOf="@id/info_text"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/info_text"
                android:text="@string/tap_the_buttons"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginStart="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/box_two_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_text"/>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:id="@+id/button" app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button2"/>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                app:layout_constraintStart_toEndOf="@+id/button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/info_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/button3" app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                app:layout_constraintStart_toEndOf="@+id/button2" app:layout_constraintHorizontal_bias="0.5"/>
    </android.support.constraint.ConstraintLayout>
</layout>